MODLD-1099: Authority index message sending (#554)
* MODLD-1099: Authority index message sending

* allow multiple Authority types

* Sonar issues fix