@@ -1,22 +1,21 @@
-package org.folio.linked.data.integration.kafka.sender.search;
+package org.folio.linked.data.integration.kafka.sender.search.work;
 
 import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonList;
 import static org.folio.ld.dictionary.ResourceTypeDictionary.INSTANCE;
 import static org.folio.ld.dictionary.ResourceTypeDictionary.WORK;
-import static org.folio.linked.data.domain.dto.ResourceIndexEventType.UPDATE;
+import static org.folio.linked.data.domain.dto.ResourceIndexEventType.CREATE;
 import static org.folio.linked.data.util.Constants.STANDALONE_PROFILE;
 import static org.folio.linked.data.util.ResourceUtils.extractWorkFromInstance;
 import static org.folio.linked.data.util.ResourceUtils.isNonLightResourceOfType;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.folio.linked.data.domain.dto.ResourceIndexEvent;
-import org.folio.linked.data.integration.kafka.sender.UpdateMessageSender;
+import org.folio.linked.data.integration.kafka.sender.CreateMessageSender;
 import org.folio.linked.data.mapper.kafka.search.WorkSearchMessageMapper;
 import org.folio.linked.data.model.entity.Resource;
 import org.folio.linked.data.model.entity.event.ResourceIndexedEvent;
@@ -30,12 +29,13 @@ import org.springframework.stereotype.Service;
 @Service
 @RequiredArgsConstructor
 @Profile("!" + STANDALONE_PROFILE)
-public class WorkUpdateMessageSender implements UpdateMessageSender {
+public class WorkCreateMessageSender implements CreateMessageSender {
 
   @Qualifier("workIndexMessageProducer")
   private final FolioMessageProducer<ResourceIndexEvent> workIndexMessageProducer;
   private final WorkSearchMessageMapper workSearchMessageMapper;
   private final ApplicationEventPublisher eventPublisher;
+  private final WorkUpdateMessageSender workUpdateMessageSender;
 
   @Override
   public Collection<Resource> apply(Resource resource) {
@@ -43,28 +43,26 @@ public class WorkUpdateMessageSender implements UpdateMessageSender {
       return singletonList(resource);
     }
     if (isNonLightResourceOfType(resource, INSTANCE)) {
-      return selectParentWorkForUpdate(resource);
+      triggerParentWorkUpdate(resource);
     }
     return emptyList();
   }
 
-  @Override
-  public void accept(Resource resource) {
-    var message = workSearchMessageMapper.toIndex(resource, UPDATE);
-    workIndexMessageProducer.sendMessages(List.of(message));
-    publishIndexEvent(resource);
+  private void triggerParentWorkUpdate(Resource instance) {
+    extractWorkFromInstance(instance)
+      .ifPresentOrElse(work -> {
+        log.debug("Instance [id {}] creation triggered parent Work [id {}] index update",
+          instance.getId(), work.getId());
+        workUpdateMessageSender.produce(work);
+      }, () -> log.error("Instance [id {}] created, but parent work wasn't found!", instance.getId()));
   }
 
-  private List<Resource> selectParentWorkForUpdate(Resource instance) {
-    return extractWorkFromInstance(instance)
-      .map(work -> {
-        log.debug("Instance [{}] update triggered parent Work [{}] index update", instance.getId(), work.getId());
-        return Collections.singletonList(work);
-      })
-      .orElseGet(() -> {
-        log.error("Instance [id {}] updated, but parent work wasn't found!", instance.getId());
-        return emptyList();
-      });
+  @Override
+  public void accept(Resource resource) {
+    log.debug("Publishing Index create message for work with ID [{}]", resource.getId());
+    var message = workSearchMessageMapper.toIndex(resource, CREATE);
+    workIndexMessageProducer.sendMessages(List.of(message));
+    publishIndexEvent(resource);
   }
 
   private void publishIndexEvent(Resource resource) {
@@ -73,5 +71,4 @@ public class WorkUpdateMessageSender implements UpdateMessageSender {
       .map(ResourceIndexedEvent::new)
       .ifPresent(eventPublisher::publishEvent);
   }
-
 }
